tests/NormalTests/paczka1/small_fuzzy/93121344.err
Error in line 1: wcb3Gx S147 88,1
Error in line 5: 0BVgt4U A285 12,3
Error in line 7: 0BVgt4U A518 44,5
